--- a/css/estiloGeneral.css
+++ b/css/estiloGeneral.css
@@ -6,7 +6,7 @@ body{
 }
 
 #encabezado{
-    background-color: #000000;
+    background-color: #b5a269;
     float: left;
     position: relative;
     width: 100%;
@@ -15,12 +15,20 @@ body{
 }
 
 #logo{
-    height: 25%;
-    width: 25%;
+    height: 100%;
+    width: 100%;
 }
 
 h1,h2,h3,h4,h5,h6{
     font-family: 'Audiowide', cursive;        
+}
+
+#principal{
+    width: 8%;
+}
+
+ul{
+    vertical-align: middle;
 }
 
 .nav,.nav-link{
