--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,9 @@
-.imagencarrusel {
+#cuerpo{
+    margin: 10px;
+    color: #000000;
+}
+
+img{
     width: 100%;
-    height: 10%;
+    height: 500px;
 }
