--- a/css/estiloGeneral.css
+++ b/css/estiloGeneral.css
@@ -57,3 +57,20 @@ ul{
     width: 100%;
     height: 10%;
 }
+
+#pie1{
+    float: left;
+    position: relative;
+    width: 60%;
+    height: 100%;
+    text-align: right;
+    vertical-align: middle;
+}
+
+#pie2{
+    float: left;
+    position: relative;
+    width: 40%;
+    height: 100%;
+    text-align: right;
+}
