--- a/css/estiloGeneral.css
+++ b/css/estiloGeneral.css
@@ -1,26 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
-@media all and (min-width: 576px) {
+/*@media all and (min-width: 576px) {
     body{
-        background-color: greenyellow;
+        background-color: black;
     }
 }
 @media all and (min-width: 768px) {
     body{
-        background-color: aqua;
+        background-color: grey;
     }
 }
 @media all and (min-width: 992px) {
     body{
-        background-color:blueviolet;
+        background-color:gray;
     }
 }
 @media all and (min-width: 1200px) {
     body{
-        background-color:deeppink;
+        background-color:gainsboro;
     }
-}
+}*/
 
 html{
     height: 100%;
