--- a/css/estiloGeneral.css
+++ b/css/estiloGeneral.css
@@ -1,8 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
+@media all and (min-width: 576px) {
+    body{
+        background-color: greenyellow;
+    }
+}
+@media all and (min-width: 768px) {
+    body{
+        background-color: aqua;
+    }
+}
+@media all and (min-width: 992px) {
+    body{
+        background-color:blueviolet;
+    }
+}
+@media all and (min-width: 1200px) {
+    body{
+        background-color:deeppink;
+    }
+}
+
+html{
+    height: 100%;
+}
+
 body{
     font-family: 'Oswald', sans-serif;
+    height: 100%;
 }
 
 #encabezado{
@@ -10,7 +36,7 @@ body{
     float: left;
     position: relative;
     width: 100%;
-    height: 25%;
+    height: 5%;
     text-align: center;
 }
 
@@ -45,7 +71,7 @@ ul{
     position: relative;
     text-align: center;
     width: 100%;
-    height: 65%;
+    height: 85%;
 }
 
 #pie{
@@ -61,7 +87,7 @@ ul{
 #pie1{
     float: left;
     position: relative;
-    width: 60%;
+    width: 58%;
     height: 100%;
     text-align: right;
     vertical-align: middle;
@@ -70,7 +96,7 @@ ul{
 #pie2{
     float: left;
     position: relative;
-    width: 40%;
+    width: 42%;
     height: 100%;
     text-align: right;
 }
